--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/isomorphic-fetch": "0.0.33",
     "@types/mz": "0.0.30",
     "@types/node-fetch": "^1.6.7",
+    "@types/source-map-support": "^0.2.28",
     "@types/websocket": "0.0.33",
     "typescript": "^2.2.2"
   },
@@ -22,6 +23,7 @@
     "isomorphic-fetch": "^2.2.1",
     "mz": "^2.6.0",
     "node-fetch": "^1.6.3",
+    "source-map-support": "^0.4.14",
     "websocket": "^1.0.24"
   }
 }
